[gd_scene load_steps=6 format=3 uid="uid://yfy3ks46sw0u"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_tvsde"]
[ext_resource type="Texture2D" uid="uid://di1bvurwasplm" path="res://resources/mountain-background.jpg" id="2_imtvk"]
[ext_resource type="FontFile" uid="uid://b1jm4p26lpwpu" path="res://resources/The Wild Breath of Zelda.otf" id="3_brg1h"]

[sub_resource type="Theme" id="Theme_n0qda"]
default_font = ExtResource("3_brg1h")
default_font_size = 1200

[sub_resource type="Theme" id="Theme_40wv0"]
default_font = ExtResource("3_brg1h")
default_font_size = 1500

[node name="Title" type="Node2D"]
scale = Vector2(0.120001, 0.0799993)
script = ExtResource("1_tvsde")

[node name="Mountain Background" type="Sprite2D" parent="."]
modulate = Color(0.803922, 0.803922, 0.803922, 1)
position = Vector2(4822.45, 4087.29)
scale = Vector2(1.23775, 1.71554)
texture = ExtResource("2_imtvk")

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Difficulty" type="Label" parent="."]
offset_left = 2249.98
offset_top = 5650.05
offset_right = 14239.0
offset_bottom = 6904.05
scale = Vector2(0.452832, 0.944435)
theme = SubResource("Theme_n0qda")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.0901961, 0.47451, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 30
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 50
text = "Current Difficulty: Normal"

[node name="Title" type="Label" parent="."]
offset_left = 1999.98
offset_top = 475.004
offset_right = 7770.98
offset_bottom = 2288.0
theme = SubResource("Theme_n0qda")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.0901961, 0.47451, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 30
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 50
text = "Rhythm Hero"

[node name="Change_Difficulty" type="Button" parent="."]
texture_filter = 1
offset_left = 3033.31
offset_top = 6850.06
offset_right = 12965.3
offset_bottom = 8422.06
scale = Vector2(0.383143, 0.559524)
theme = SubResource("Theme_40wv0")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.643137, 0.643137, 0.643137, 1)
text = "Change Difficulty"

[node name="Play" type="Button" parent="."]
texture_filter = 1
offset_left = 3033.31
offset_top = 1875.02
offset_right = 6600.31
offset_bottom = 3725.02
theme = SubResource("Theme_40wv0")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.643137, 0.643137, 0.643137, 1)
text = "PLAY"

[node name="Tutorial" type="Button" parent="."]
texture_filter = 1
offset_left = 2399.98
offset_top = 3925.04
offset_right = 8464.98
offset_bottom = 5775.04
scale = Vector2(0.817094, 0.820816)
theme = SubResource("Theme_40wv0")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.643137, 0.643137, 0.643137, 1)
text = "TUTORIAL"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(4841.63, 4037.54)

[connection signal="pressed" from="Change_Difficulty" to="." method="_on_change_difficulty_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_tutorial_pressed"]
